update s2
